tdf#85523 DOCX import: fix unexpected extra char at comment end

Change-Id: Ic3eb073d11a395a81b90fd1a9292d6ecf2940c09